--- a/contact-page.html
+++ b/contact-page.html
@@ -32,7 +32,7 @@
             Phone: 04025542392
         </p>
     </div>
-    <img src="https://via.placeholder.com/500x500" alt="placeholder image" class="center">
+    <img src="map1.png" alt="placeholder image" class="center">
     </main>
 </div>
 </body>
