--- a/main-page.html
+++ b/main-page.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h2>NERV</h2>
-        <img src="https://via.placeholder.com/1500x500" alt="placeholder image" class="center">
+        <img src="black.jpg" alt="placeholder image" class="center">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum exercitationem, maiores optio quae quod
             veniam. At dolor eos harum in ipsam libero obcaecati, placeat repellendus sunt velit voluptas
             voluptatum.</p>
