--- a/store-page.html
+++ b/store-page.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h2>Our Products</h2>
-        <img src="https://via.placeholder.com/1500x500" alt="Placeholder banner image" class="center">
+        <img src="black.jpg" alt="Placeholder banner image" class="center">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum exercitationem, maiores optio quae quod
             veniam. At dolor eos harum in ipsam libero obcaecati, placeat repellendus sunt velit voluptas
             voluptatum.</p>
@@ -31,7 +31,7 @@
             <article>
                 <h3>Product 1</h3>
                 <figure>
-                    <img src="https://via.placeholder.com/400x300" alt="Product 1 image">
+                    <img src="kuva2.jpg" alt="Product 1 image">
                     <figcaption>Product 1</figcaption>
                 </figure>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
@@ -44,7 +44,7 @@
             <article>
                 <h3>Product 2</h3>
                 <figure>
-                    <img src="https://via.placeholder.com/400x300" alt="Product 2 image">
+                    <img src="kuva3.jpg" alt="Product 2 image">
                     <figcaption>Product 2</figcaption>
                 </figure>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
@@ -57,7 +57,7 @@
             <article>
                 <h3>Product 3</h3>
                 <figure>
-                    <img src="https://via.placeholder.com/400x300" alt="Product 3 image">
+                    <img src="kuva1.jpg" alt="Product 3 image">
                     <figcaption>Product 3</figcaption>
                 </figure>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
