--- a/Results.html
+++ b/Results.html
@@ -24,7 +24,9 @@ font-family: "Raleway", sans-serif;
 </p>
 <h2>Contrast</h2>
 <p>
-    <img src="img/contrast.png" alt="contrast">
+    <img src="con1.png" alt="contrast">
+    <img src="con2.png" alt="contrast">
+    <img src="con3.png" alt="contrast">
 </p>
 
 </body>
