--- a/store-page.html
+++ b/store-page.html
@@ -22,7 +22,7 @@
     <main>
         <h2>Our Products</h2>
         <img src="black.jpg" alt="Placeholder banner image" class="center">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum exercitationem, maiores optio quae quod
+        <p class="product-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum exercitationem, maiores optio quae quod
             veniam. At dolor eos harum in ipsam libero obcaecati, placeat repellendus sunt velit voluptas
             voluptatum.</p>
 
